added - google login - svg for drawing projects with zoom and scroll - cljc model and belib helper functions - cal-week based model with adaption of load. - model spec